Fix vertical alignment of expandable header chevron (#2652)

--- a/apps/browser/src/popup/scss/box.scss
+++ b/apps/browser/src/popup/scss/box.scss
@@ -26,6 +26,7 @@
     display: flex;
     width: 100%;
     box-sizing: border-box;
+    align-items: center;
 
     @include themify($themes) {
       color: themed("headingColor");
